--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -1,15 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@900&display=swap');
+/*
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 
 body {
+	height: 100vh;
+	display: grid;
+	place-items: center;
     background-color: #03045E;
+}
+
+
+aksh
+
+form {
+	display: grid;
+	gap: 2rem;
 }
 
 h1 {
     font-family: 'Source Code Pro', 'sans-serif';
     font-style: normal;
     font-size: 50px;
+    align-self: center;
     color: #F03A47;
 }
+
+
 
 label {
     font-family: 'Source Code Pro', 'sans-serif';
@@ -28,4 +48,127 @@ input {
     font-family: 'Source Code Pro', 'sans-serif';
     font-size: 20px;
     color: #F6F4F3;
+}
+
+.container {
+	height: 600px;
+	width: 450px;
+	padding: 2.5rem;
+	background-color: #e0e6eb;
+	border-radius: 1.5rem;
+
+	display: flex;
+	flex-direction: column;
+	gap: 3rem;
+
+	box-shadow: -13px -13px 12px #fff, 13px 13px 12px #cbced1;
+}
+
+
+.field {
+	display: grid;
+	gap: 1rem;
+} */
+
+
+
+
+
+
+
+
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&display=swap");
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	height: 100vh;
+	display: grid;
+	place-items: center;
+	font-family: "Source Code Pro", "Poppins", sans-serif;
+	background-color: #041C32;
+}
+
+.container {
+	height: 600px;
+	width: 450px;
+	padding: 2.5rem;
+	background-color: #041C32;
+	border-radius: 1.5rem;
+
+	display: flex;
+	flex-direction: column;
+	gap: 3rem;
+
+	box-shadow: -13px -13px 12px #064663, 13px 13px 12px #04293A;
+}
+
+h1 {
+	font-size: 3rem;
+	font-weight: 500;
+	align-self: center;
+    color: #ECB365;
+}
+
+form {
+	display: grid;
+	gap: 2rem;
+	/* 	grid-auto-rows: 2rem; */
+}
+
+.field {
+	display: grid;
+	gap: 1rem;
+}
+
+label {
+    color:#ECB365;
+}
+
+input {
+	background: transparent;
+	border-radius: 1.5rem;
+	border: none;
+	padding: 1rem;
+	font-family: inherit;
+	outline: none;
+    color: #ECB365;
+
+
+	box-shadow: inset -5px -5px 12px #064663, inset 5px 5px 12px #04293A;
+}
+
+button {
+	background: transparent;
+	border: none;
+	font-size: 1.25rem;
+	padding: 0.7rem;
+	font-family: "Source Code Pro", inherit;
+	border-radius: 1.5rem;
+    color: #ECB365;
+	box-shadow: -5px -5px 15px #064663, 5px 5px 15px #04293A;
+	transition: box-shadow 300ms ease;
+	cursor: pointer;
+}
+
+button:hover {
+	box-shadow: -10px -10px 12px #064663, 10px 10px 12px #04293A;
+}
+
+::placeholder {
+    color: #ECB365;
+    opacity: 0.75;
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: red;
+}
+  
+::-ms-input-placeholder { /* Microsoft Edge */
+    color: red;
 }
