--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -10,7 +10,7 @@ body {
 	height: 100vh;
 	display: grid;
 	place-items: center;
-	font-family: "Poppins", sans-serif;
+	font-family: 'Poppins', sans-serif;
 	background-color: #232931;
 	color: #eeeeee;
 }
@@ -28,8 +28,8 @@ body {
 
 	box-shadow: -10px -10px 10px #2a353c, 10px 10px 10px #1c1e27;
 
-    overflow-x: hidden;
-    overflow-y: auto;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
 h1 {
@@ -44,13 +44,9 @@ form {
 	gap: 2rem;
 	/* 	grid-auto-rows: 2rem; */
 
-
-
-    /* UNSURE */
-    --webkit-appearance: none; /* Unsure areas */
-    /* UNSURE */
-
-
+	/* UNSURE */
+	--webkit-appearance: none; /* Unsure areas */
+	/* UNSURE */
 }
 
 .field {
@@ -105,15 +101,15 @@ button:focus-within {
 }
 
 ::-webkit-scrollbar {
-    width: 0.5rem;
-  }
-  
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 10px;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background: #4ecca3;
-    border-radius: 10px;
-  }
+	width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px grey;
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #4ecca3;
+	border-radius: 10px;
+}
