--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -113,3 +113,9 @@ button:focus-within {
 	background: #4ecca3;
 	border-radius: 10px;
 }
+
+#easter-egg {
+	color: inherit;
+	text-decoration: none;
+	cursor: auto;
+}
